--- a/docker/Dockerfile.server
+++ b/docker/Dockerfile.server
@@ -1,4 +1,5 @@
-from ubuntu:focal
+ARG BASE_IMAGE=nvidia/cuda:11.2.0-devel-ubuntu20.04
+from ${BASE_IMAGE} as prod
 
 # Install apt dependendencies
 RUN apt-get update && \
@@ -23,15 +24,18 @@ RUN curl -L ${BLENDER_URL} | tar -xJ -C /usr/local/ && \
 ENV PATH=/usr/local/blender:$PATH
 
 # Create user
-RUN mkdir /home/render && \
-    groupadd -g 8777 -r render && \
-    useradd --no-log-init -r -g render render && \
-    chown render /home/render
-USER render
+# RUN mkdir /home/render && \
+#     groupadd -g 8777 -r render && \
+#     useradd --no-log-init -r -g render render && \
+#     chown render /home/render
+# USER render
 
 # Create virtual environment
-RUN python3.8 -m venv $HOME/venv
-ENV PATH=/home/render/venv/bin:$PATH
+# RUN python3.8 -m venv $HOME/venv
+# ENV PATH=/home/render/venv/bin:$PATH
+
+RUN python3.8 -m venv /venv
+ENV PATH=/venv/bin:$PATH
 
 # Install python dependencies
 ADD server/requirements.txt /tmp/requirements.txt
