--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -27,15 +27,38 @@ jobs:
       if: always()
       uses: psf/black@stable
       with:
-        option: "-l 120"
+        options: "-l 120"
         src: "."
 
     - name: Check style
       if: always()
       run: python -m pylint server client
 
-  build:
-    name: Build
+  build-cpu:
+    name: Build Server (CPU)
+    
+    runs-on: ubuntu-latest
+
+    steps:
+    - uses: actions/checkout@v2
+
+    - name: Login to DockerHub
+      uses: docker/login-action@v1 
+      with:
+        username: ${{ secrets.DOCKERHUB_USERNAME }}
+        password: ${{ secrets.DOCKERHUB_PASSWORD }}
+
+    - name: Build and push
+      uses: docker/build-push-action@v2
+      with:
+        context: .
+        file: docker/Dockerfile.server
+        build-args: BASE_IMAGE=ubuntu:focal
+        push: false
+        tags: cgundlach13/cloud-render-server-cpu:latest
+
+  build-gpu:
+    name: Build Server (GPU)
     
     runs-on: ubuntu-latest
 
@@ -54,5 +77,5 @@ jobs:
         context: .
         file: docker/Dockerfile.server
         push: false
-        tags: cgundlach13/cloud-render-server:latest
+        tags: cgundlach13/cloud-render-server-gpu:latest
     
